<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">PolyBooster</string>

    <string name="quiz_restart">Rejouer le quiz</string>
    <string name="quiz_home">Accueil</string>

    <string name="lang_en">Anglais</string>
    <string name="lang_es">Espagnol</string>
    <string name="lang_mix">Aléatoire</string>
    <string name="lang_selected">Langue sélectionnée : %1$s</string>

    <string name="quiz_not_enough_cards">Pas assez de cartes débloquées pour le quiz.</string>
    <string name="quiz_prompt">Comment dit-on “%1$s” en %2$s ?</string>
    <string name="quiz_progress">Progression : %1$d/%2$d</string>
    <string name="quiz_win">Bravo ! ⭐️ obtenue !</string>
    <string name="quiz_score">Ton score : %1$d/10</string>
    <string name="quiz_score_star">Bravo\u00A0! %1$d\u00A0/ 10 \u2013 1+ étoile\u00A0!</string>

    <string name="stat_title">Statistiques globales</string>
    <string name="stat_total">Total parties : %1$d</string>
    <string name="stat_average">Moyenne : %1$s / 10</string>
    <string name="stat_best">Meilleur score : %1$s / 10</string>
    <string name="stat_lang">Répartition :
EN → %1$d, ES → %2$d, MIX → %3$d</string>

    <string name="booster_star_count">Étoiles : %1$d</string>
    <string name="booster_empty">Aucun booster disponible pour l instant.</string>
    <string name="booster_success">Booster ouvert : %1$d cartes débloquées !</string>
    <string name="booster_wait">Veuillez attendre encore %1$d minutes avant le prochain booster.</string>

    <string-array name="quiz_languages">
        <item>Anglais</item>
        <item>Espagnol</item>
        <item>Aléatoire</item>
    </string-array>

    <string name="label_star_spent">Étoile dépensée !</string>
    <string name="label_star_error">Pas assez d’étoiles.</string>
    <string name="label_etoiles">Étoiles : %1$d</string>
    <string name="label_star_not_enough">Pas assez d étoiles pour ouvrir un booster.</string>
    <string name="titre_un_booster">Ouvrir un Booster</string>

    <string name="back">Retour</string>

    <string name="unlocked_cards">Cartes débloquées : %1$d</string>
    <string name="total_cards">Cartes totales : %1$d</string>
    <string name="available_stars">Étoiles disponibles : %1$d</string>

    <string name="quiz_quit">Quitter</string>

    <string name="stat_block">
    Total parties : %1$d\n
    Moyenne : %2$s / 10\n
    Meilleur score : %3$s / 10\n
    Répartition : EN → %4$d, ES → %5$d, MIX → %6$d</string>

    <string name="menu_collection">Collection</string>
    <string name="titre_principale">Bienvenue sur PolyBooster</string>
    <string name="collection">Collection</string>
    <string name="mes_stats">Voir mes Stats</string>
    <string name="quiz">Lancer le Quiz</string>
    <string name="ma_collection">Ma Collection</string>
    <string name="booster">Booster</string>
    <string name="toiles_0">Étoiles : 0</string>
    <string name="motivation">Chaque booster te rapproche de ton objectif 🚀</string>
    <string name="toolbarquiz">Quiz</string>
    <string name="select_en">Langue sélectionnée : EN</string>
    <string name="progression">Progression : 0/10</string>
    <string name="question">Question...</string>
    <string name="votre_r_ponse">Votre réponse</string>
    <string name="suivant">Suivant</string>
    <string name="recommencer">Recommencer</string>
    <string name="langue">Langue</string>


</resources>
